--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,24 @@
+@keyframes slideIn {
+  0% {
+    padding-top: 50%;
+  }
+  100% {
+    padding-top: 0px;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 body {
   font-family: "Roboto", "Noto Sans JP", sans-serif;
-  margin: 0 auto;
+  max-width: 1600px;
   text-align: justify;
   background-color: #f0f8ff;
 }
@@ -10,8 +28,14 @@ section {
   padding: 100px 300px;
 }
 
+figure {
+  margin: 0;
+  padding: 0;
+}
+
 img {
   width: 100%;
+  vertical-align: bottom;
 }
 
 .mb-sm {
@@ -56,29 +80,19 @@ li {
   background: linear-gradient(transparent 60%, lightcyan 0%);
 }
 
-.title {
-  font-size: 48px;
-  padding: 20px 10px;
-  margin-top: 100px;
-  width: 600px;
-}
-
-.header {
-  background-color: #f0f8ff;
-}
-
-.nav {
+.bl_nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 50px;
+  background-color: #f0f8ff;
 }
 
-.header-logo img {
+.el_headerLogo_imgWrapper {
   width: 80px;
 }
 
-.menu-list {
+.bl_menuList {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -86,58 +100,85 @@ li {
   gap: 20px;
   background-color: #f0f8ff;
   border-radius: 20px;
-  box-shadow: 3px 3px 5px #1b2f60, 0px 3px 5px #1b2f60;
+  box-shadow: 3px 3px 5px #b0c4de, 0px 3px 5px #b0c4de;
 }
 
-.menu-item {
+.hl_shadow {
+  box-shadow: 3px 3px 5px #b0c4de, 0px 3px 5px #b0c4de;
+}
+
+.el_menuItem {
   width: fit-content;
   padding: 10px 20px;
+  border-radius: 20px;
 }
 
-.hero-header {
-  width: 100%;
+.el_menuItem:hover {
+  text-decoration: underline;
+  background-color: #1b2f60;
+  color: #fff;
+  transition: .7s;
+}
+
+.bl_hero {
+  width: 80%;
   height: 700px;
   display: flex;
   align-items: center;
-  animation: slideIn 3s ease-in;
+  justify-content: center;
+  padding: 0 50px;
+  animation: fadeIn 1s ease forwards,slideIn 1s ease;
 }
 
-.hero-header__heading {
+.bl_hero_heading {
   font-size: 220px;
   line-height: 1;
 }
 
-.hero-header__sub-heading {
+.bl_hero_subHeading {
   font-size: 4vw;
   line-height: 1;
 }
 
-.hero-header__description {
+.bl_hero_description {
   font-size: 2vw;
 }
 
-.arrow {
+.el_arrow_wrapper {
   width: 40%;
   position: absolute;
-  right: 0;
+  right: 100px;
   z-index: -1;
 }
 
-.services {
+.el_heading {
+  font-size: 48px;
+  padding: 20px 10px;
+  margin-top: 100px;
+  width: 600px;
+}
+
+.bl_services {
   background-color: #1b2f60;
   color: #fff;
 }
 
-.ly_card_wrapper {
+.bl_card_wrapper {
   display: flex;
   justify-content: space-around;
+  gap: 50px;
+}
+
+.card {
+  margin-top: 50px;
 }
 
 .card_image {
   width: 300px;
+  margin: 0 auto;
 }
 
-.skills__title {
+.skills__heading {
   background-color: #1b2f60;
   border-radius: 50px;
   padding: 0 50px;
