スキルブロック

--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -12,7 +12,7 @@ body {
 
 section {
   margin: 0 auto;
-	padding: 100px 300px;
+	padding: 100px 250px;
   // margin-bottom: 70px;
   // padding-top: 50px;
 }
@@ -44,12 +44,7 @@ img{
   padding-bottom: 80px !important;
 }
 
-// 要素中央揃え
-.content-width {
-  width: 90%;
-  margin: 0 auto;
-  max-width: $contentMaxWidth;
-}
+
 
 // 箇条書きスタイル消す
 ul {
@@ -107,8 +102,6 @@ li {
 .hl_shadow{
 	box-shadow:
 	3px 3px 5px $--shadow-cBlue,
-	// -5px -5px 5px $--main-primary,
-	// 5px -5px 5px $--main-primary,
 	0px 3px 5px $--shadow-cBlue,
 	;
 }
@@ -202,23 +195,44 @@ li {
 
 
 // skills
-.skills__heading {
-  background-color: $--main-primary;
+.el_heading_wrapper{
+	background-color: $--main-primary;
 	border-radius: 50px;
+}
+
+.el_heading_skills {
 	padding: 0 50px;
   color: #fff;
 }
 
-.skills__card {
-  display: flex;
-  gap: 20px;
-  margin-top: 50px;
-  margin-left: 200px;
+.bl_skills_list{
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	text-align: left;
 }
 
-.skills__ico {
-  width: 100px;
+.el_article{
+	display: flex;
+	gap: 20px;
+	width: 45%;
+	margin-bottom: 50px;
 }
+
+.el_article_image{
+	flex:1;
+}
+
+.bl_skills_txtWrapper{
+	flex: 2;
+}
+
+
+
+
+
+
 
 
 //performance
