--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body {
 
 section {
   margin: 0 auto;
-  padding: 100px 300px;
+  padding: 100px 250px;
 }
 
 figure {
@@ -56,12 +56,6 @@ img {
 
 .pb-lg {
   padding-bottom: 80px !important;
-}
-
-.content-width {
-  width: 90%;
-  margin: 0 auto;
-  max-width: 1440px;
 }
 
 ul {
@@ -178,22 +172,37 @@ li {
   margin: 0 auto;
 }
 
-.skills__heading {
+.el_heading_wrapper {
   background-color: #1b2f60;
   border-radius: 50px;
+}
+
+.el_heading_skills {
   padding: 0 50px;
   color: #fff;
 }
 
-.skills__card {
+.bl_skills_list {
   display: flex;
-  gap: 20px;
-  margin-top: 50px;
-  margin-left: 200px;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  text-align: left;
 }
 
-.skills__ico {
-  width: 100px;
+.el_article {
+  display: flex;
+  gap: 20px;
+  width: 45%;
+  margin-bottom: 50px;
+}
+
+.el_article_image {
+  flex: 1;
+}
+
+.bl_skills_txtWrapper {
+  flex: 2;
 }
 
 footer {
