--- a/styles/modules/_animation.scss
+++ b/styles/modules/_animation.scss
@@ -1,17 +1,20 @@
-@keyframes slideIn{
+@keyframes slideIn {
   0% {
-    padding-top: 50%;
+    margin-top: 50%;
   }
+  50% {
+    margin-top: -90px;
+	}
   100% {
-    padding-top: 0px;
+		margin-top: 50px;
   }
-};
+}
 
 @keyframes fadeIn {
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 1;
-	}
-};
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+} ;
