オープニングアニメーション

--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -122,15 +122,22 @@ li {
   align-items: center;
   justify-content: center;
   padding: 0 50px;
-  animation: fadeIn 1s ease-out forwards, slideIn 1s ease forwards;
+  // animation: fadeIn 1s ease-out forwards, slideIn 1s ease forwards;
 }
-
 
 
 .bl_hero_heading {
   font-size: 220px;
   line-height: 1;
 }
+
+.char{
+	display: inline-block;
+	margin-right: -50px;
+	transform: translateX(-300px);
+}
+
+
 
 .bl_hero_subHeading {
   font-size: 4vw;
@@ -205,6 +212,7 @@ li {
   width: 45%;
   margin-bottom: 50px;
 }
+
 
 .el_article_image {
   flex: 1;
@@ -312,3 +320,12 @@ table th.popular span.inner{
 }
 
 // footer
+
+.inview{
+
+}
+
+.test{
+	width:200px;
+	z-index: 999;
+}
