リファクタリング途中

--- a/styles/modules/_variables.scss
+++ b/styles/modules/_variables.scss
@@ -5,6 +5,8 @@ $contentMaxWidth: 1440px;
 $--main-primary:  #1b2f60;
 $--main-secondary:#f0f8ff;
 $--shadow-cBlue: #b0c4de;
+$--font-cBlack: #333;
+$--font-cWhite: #fff;
 
 
 //animation
