--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -1,6 +1,6 @@
 //レイアウト確認
 * {
-  // border: dashed 1px #333;
+  outline: dashed 1px skyblue;
 }
 
 body {
@@ -55,6 +55,37 @@ li {
   background: linear-gradient(transparent 60%, lightcyan 0%);
 }
 
+// common-layout
+.ly_cont {
+	margin: 0 auto;
+  padding: 100px 250px;
+}
+.el_heading {
+  font-size: 48px;
+  padding: 20px 10px;
+  // margin-top: 100px;
+  width: 600px;
+}
+
+.el_description{
+	color: $--font-cBlack;
+	font-size: 1.25rem;
+}
+
+.el_description__white{
+	color: $--font-cWhite;
+}
+
+.ly_heading{
+	text-align: left;
+	// margin-bottom: 300px;
+	font-size: 48px;
+  padding: 20px 10px;
+  // margin-top: 100px;
+  width: 600px;
+}
+
+
 // header
 .ly_header {
   position: fixed;
@@ -108,23 +139,16 @@ li {
   }
 }
 
-// common-layout
-.ly_cont {
-	margin: 0 auto;
-  padding: 100px 250px;
-}
-
-// hero
+// hero >>>
 .ly_cont_hero {
 	width: 80%;
   height: 700px;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 50px;
-  // animation: fadeIn 1s ease-out forwards, slideIn 1s ease forwards;
+  padding: 50px;
+	margin-top: 100px;
 }
-
 
 .bl_hero_heading {
   font-size: 220px;
@@ -136,8 +160,6 @@ li {
 	margin-right: -50px;
 	transform: translateX(-300px);
 }
-
-
 
 .bl_hero_subHeading {
   font-size: 4vw;
@@ -154,14 +176,8 @@ li {
   right: 100px;
   z-index: -1;
 }
+// <<< hero
 
-// common_class
-.el_heading {
-  font-size: 48px;
-  padding: 20px 10px;
-  margin-top: 100px;
-  width: 600px;
-}
 
 // services
 
@@ -224,86 +240,16 @@ li {
   flex: 2;
 }
 
+.el_link_white{
+color: skyblue;
+&:hover,&:focus{
+	color: white;
+}
+}
+
 // price
 
-table{
-  border-collapse: collapse;
-  border-spacing: 0;
-  table-layout: fixed;
-  width: 100%;
-}
 
-table tr:last-child{
-  border-bottom:solid 1px #ddd;
-}
-
-table th{
-  text-align: center;
-  padding: 7px 0;
-  border-right:solid 1px #ddd;
-  border-left:solid 1px #ddd;
-  width: 33%;
-}
-
-table th:nth-child(1){
-  background-color:#dddddd;
-}
-
-table th:nth-child(3){
-  background-color:#f5b932;
-  color: white;
-}
-
-table tr:nth-child(2) td{
-  font-size: 30px;
-}
-
-table td{
-  text-align: center;
-  padding: 7px 0;
-  border-right:solid 1px #ddd;
-  border-left:solid 1px #ddd;
-  width: 155px;
-}
-
-table td a{
-  background-color: #25b327;
-  color: white;
-  padding:5px 20px;
-  border-radius: 30px;
-  font-weight: bold;
-}
-
-table .popular{
-  // width: 180px;
-}
-
-table th.popular{
-  position: relative;
-}
-
-table th.popular span.no1{
-  position: absolute;
-  top: -10px;
-  left:calc(50% - 30px);
-  background: #bdcc28;
-  // width: 60px;
-  font-size: 10px;
-  border-radius: 15px;
-  line-height: 1;
-  padding: 5px;
-}
-
-table th.popular span.inner{
-  position: absolute;
-  color:white;
-  background-color: #f34955;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  padding: 10px 0;
-}
 
 
 //performance
@@ -320,12 +266,3 @@ table th.popular span.inner{
 }
 
 // footer
-
-.inview{
-
-}
-
-.test{
-	width:200px;
-	z-index: 999;
-}
